# medallion-foundry

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_DATA_VALIDATION_SUMMARY.md  CONTRIBUTING.md  DATA_CORRECTNESS_REPORT.json  DATA_CORRECTNESS_VALIDATION_REPORT.json  DOCUMENTATION.md  IMPLEMENTATION_COMPLETE.md  INSTALLATION.md  LICENSE  MANIFEST.in  Makefile  PHASE_4_SUMMARY.md  POLYBASE_QUERY_ANALYSIS_SUMMARY.md  PROJECT_IMPROVEMENTS.md  PROJECT_REVIEW_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  RELEASE_NOTES_v1.0.0.md  REVIEW_COMPLETED.md  SECURITY.md  SILVER_VALIDATION_TESTS_SUMMARY.md  TESTING.md  TEST_IMPROVEMENTS_SUMMARY.md  UPGRADE_GUIDE.md  UPGRADING.md  azure-pipelines.yml  bronze_extract.py  dev.ps1  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-azure.txt  requirements-db.txt  requirements-dev.txt  (+9 more)
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  labeler.yml  publish.yml  release.yml
.state/checkpoints/: system_synthetic_table_claims_pattern_snapshot_dt_2024-01-15__checkpoint.json  system_test_table_test_table_checkpoint.json
config/: README.md
core/: DEPRECATED.md  README.md  __init__.py  azure_storage.py  catalog.py  checkpoint.py  config.py  config_models.py  context.py  deprecation.py  error_wrapper.py  exceptions.py  hooks.py  io.py  local_storage.py  logging_config.py  parallel.py  partitioning.py  paths.py  patterns.py  rate_limit.py  retry.py  run_options.py  runner.py  s3.py  silver_models.py  storage.py  storage_plugins.py  tracing.py
core/_compat/: __init__.py  adapters.py  config.py  infrastructure.py  io.py  observability.py  om.py  primitives.py  resilience.py  runtime.py  services.py  storage.py
core/adapters/: __init__.py
core/bronze/: base.py  io.py  plan.py
core/catalog/: hooks.py  yaml_generator.py
core/config/: __init__.py  dataset.py  doctor.py  env_substitution.py  loader.py  loaders.py  migrate.py  migration.py  models.py  typed_models.py  validation.py
core/domain/: __init__.py
core/extractors/: api_extractor.py  async_http.py  base.py  db_extractor.py  file_extractor.py
core/foundation/: __init__.py  time_utils.py
core/infrastructure/: __init__.py
core/io/: __init__.py
core/observability/: errors.py  logging.py  tracing.py
core/om/: __init__.py  client.py
core/orchestration/: __init__.py  parallel.py
core/pipeline/: __init__.py
core/platform/: __init__.py
core/polybase/: __init__.py  polybase_generator.py
core/primitives/: __init__.py  time_utils.py
core/resilience/: __init__.py  circuit_breaker.py  constants.py  error_mapping.py  late_data.py  rate_limiter.py  retry.py
core/runner/: chunks.py  job.py
core/runtime/: __init__.py  context.py  file_io.py  metadata.py  options.py  paths.py
core/samples/: bootstrap.py
core/services/: __init__.py
core/silver/: __init__.py  artifacts.py  defaults.py  models.py  processor.py  stream.py  writer.py
core/state/: __init__.py  manifest.py
core/storage/: __init__.py  azure.py  backend.py  filesystem.py  locks.py  metadata.py  plugin_factories.py  plugin_manager.py  policy.py  registry.py
docs/: ADVANCED_PATTERNS.md  ARCHITECTURE.md  BUSINESS_LOGIC_BOUNDARIES.md  CONCEPTS.md  CONFIG_DOCTOR.md  CONFIG_REFERENCE.md  CONTRIBUTING.md  CORE_ARCHITECTURE.md  DOCUMENTATION.md  ENHANCED_FEATURES.md  ERROR_CODES.md  EXTENDING_EXTRACTORS.md  FIRST_PIPELINE.md  FIRST_RUN_CHECKLIST.md  GETTING_STARTED.md  GOLD_LAYER_PATTERNS.md  INSTALLATION.md  MODEL_SELECTION.md  OPERATIONS.md  OPS_PLAYBOOK.md  PATTERN_ID_IMPLEMENTATION.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  ROADMAP.md  SILVER_JOIN.md  STORAGE_BACKEND_ARCHITECTURE.md  TESTING.md  TROUBLESHOOTING.md  index.md
docs/api/: core.md  extractors.md
docs/design/: SILVER_LAYER_DECISIONS.md  polybase_query_analysis.md
docs/examples/: README.md  REAL_WORLD_EXAMPLES.md
docs/framework/: EXTENDING_EXTRACTORS.md  PROJECT_REVIEW.md  PROJECT_REVIEW_INSIGHTS.md  REVIEW_COMPLETION_SUMMARY.md  S3_SETUP_GUIDE.md  (+9 more)
environments/: .gitignore  README.md  dev.yaml
extractors/: __init__.py  api_extractor.py  base.py  db_extractor.py  file_extractor.py
pipelines/: QUICKREF.md  __init__.py  __main__.py  create.py
scripts/: POLYBASE_USAGE.md  benchmark.py  check_layer_imports.py  clean_generated_artifacts.py  debug_concurrent_lock_run.py  debug_concurrent_simple.py  debug_inspect_lock.py  expand_owner_intent.py  generate_bronze_samples.py  generate_pattern_test_data.py  generate_polybase_ddl.py  generate_sample_data.py  generate_silver_join_samples.py  generate_silver_samples.py  generate_yaml_test_data.py  lock_holder.py  migrate_pipelines.py  run_all_bronze_patterns.py  run_concurrent_small.py  run_concurrent_test_py.py  run_demo.py  run_intent_config.py  run_multiday_demo.py  setup_dev.py  silver_consolidate.py  test_s3_connection.py  validate_yaml_configs.py  verify_bronze_samples_s3.py
tests/: __init__.py  conftest.py  manual_s3_connection.py  manual_s3_pipeline.py  synthetic_data.py  test_additional_coverage.py  test_all_patterns_data_correctness.py  test_api_extractor.py  test_api_extractor_async.py  test_api_extractor_errors.py  test_async_http.py  test_azure_integration.py  test_bronze_io.py  test_bronze_patterns.py  test_bronze_reference.py  test_bronze_sample_integrity.py  test_checkpoint.py  test_checksum_verification.py  test_chunk_processor_errors.py  test_chunks.py  test_cli_flags.py  test_concurrent_silver_extracts.py  test_config.py  test_config_loader.py  test_config_parameters.py  test_config_validation.py  test_cursor_state.py  test_dataset_writer.py  test_db_extractor.py  test_enhanced_features.py  test_env_substitution.py  test_env_utils.py  test_error_codes.py  test_extractor_base.py  test_extractor_resilience.py  test_extractors.py  test_file_extractor.py  test_foundations_base.py  test_generate_sample_data_cli.py  test_generate_silver_samples_failure.py  (+64 more)
(+646 files in other folders)
