[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "medallion-foundry"
dynamic = ["version"]
description = "Config-driven Python framework for landing data into Bronze layer with pluggable storage backends"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Tony Sebion"}
]
keywords = ["data-engineering", "bronze-layer", "medallion-architecture", "etl", "data-pipeline", "storage-backends"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.26.0",
    "jmespath>=1.0.0",  # Required by boto3
    "pandas>=1.5.0",
    "pyarrow>=10.0.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "tenacity>=8.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.10.0",
    "black>=22.0.0",
    "isort>=5.11.0",
    "mypy>=0.990",
    "types-PyYAML>=6.0.0",
    "types-requests>=2.28.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "ruff>=0.3.0",
    "flake8>=6.0.0",
    "pre-commit>=3.6.0",
    "moto[s3]>=5.0.0",
    "httpx>=0.27.0",  # Async HTTP support - included so all tests run
    "import-linter>=2.0",  # Layer architecture enforcement
]
azure = [
    "azure-storage-blob>=12.19.0",
    "azure-identity>=1.15.0",
    "adlfs>=2023.11.0",
]
db = [
    "pyodbc>=4.0.0",
    "pymssql>=2.2.0",
    "psycopg2-binary>=2.9.0",
    "mysql-connector-python>=8.0.0",
]
async = [
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/tonysebion/medallion-foundry"
Documentation = "https://github.com/tonysebion/medallion-foundry/blob/main/README.md"
Repository = "https://github.com/tonysebion/medallion-foundry"
"Bug Reports" = "https://github.com/tonysebion/medallion-foundry/issues"
Changelog = "https://github.com/tonysebion/medallion-foundry/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = [
    "core",
    "core.foundation",
    "core.foundation.primitives",
    "core.foundation.state",
    "core.foundation.catalog",
    "core.platform",
    "core.platform.resilience",
    "core.platform.observability",
    "core.platform.om",
    "core.infrastructure",
    "core.infrastructure.config",
    "core.infrastructure.config.models",
    "core.infrastructure.io",
    "core.infrastructure.io.storage",
    "core.infrastructure.io.http",
    "core.infrastructure.io.extractors",
    "core.infrastructure.runtime",
    "core.infrastructure.runtime.paths",
    "core.infrastructure.runtime.config",
    "core.domain",
    "core.domain.adapters",
    "core.domain.adapters.extractors",
    "core.domain.adapters.quality",
    "core.domain.adapters.schema",
    "core.domain.adapters.polybase",
    "core.domain.services",
    "core.domain.services.pipelines",
    "core.domain.services.pipelines.bronze",
    "core.domain.catalog",
    "core.orchestration",
    "core.orchestration.runner",
    "core._compat",
    # Pipelines - Ibis-based pipeline framework (recommended for new development)
    "pipelines",
    "pipelines.lib",
]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml"]

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "boto3.*",
    "botocore.*",
    "requests.*",
    "tenacity.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["core", "extractors", "pipelines"]
omit = ["tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.setuptools_scm]
write_to = "core/_version.py"
version_scheme = "post-release"
local_scheme = "no-local-version"

# =============================================================================
# Import Linter - Layer Architecture Enforcement
# =============================================================================
[tool.importlinter]
root_package = "core"

[[tool.importlinter.contracts]]
name = "Layer architecture"
type = "layers"
layers = [
    "core.orchestration",
    "core.domain",
    "core.infrastructure",
    "core.platform",
    "core.foundation",
]
