[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "medallion-foundry"
dynamic = ["version"]
description = "Config-driven Python framework for landing data into Bronze layer with pluggable storage backends"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Tony Sebion"}
]
keywords = ["data-engineering", "bronze-layer", "medallion-architecture", "etl", "data-pipeline", "storage-backends"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.26.0",
    "pandas>=1.5.0",
    "pyarrow>=10.0.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "httpx>=0.27.0",
    "requests-toolbelt>=1.0.0",
    "tenacity>=8.0.0",
    "polars>=1.0.0",
    "pandera>=0.20.0",
    "pydantic-settings>=2.1.0",
    "structlog>=24.1.0",
    "ibis-framework[duckdb]>=9.0.0",
    "s3fs>=2023.1.0",
    "pyodbc>=4.0.0",
    "azure-identity>=1.14.0",
    "azure-storage-blob>=12.12.0",
    "fsspec>=2023.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.10.0",
    "mypy>=0.990",
    "types-PyYAML>=6.0.0",
    "types-requests>=2.28.0",
    "mkdocs-material>=9.0.0",
    "ruff>=0.3.0",
    "pre-commit>=3.6.0",
    "import-linter>=2.0",  # Layer architecture enforcement
]
azure = [
    "azure-storage-blob>=12.19.0",
    "azure-identity>=1.15.0",
    "adlfs>=2023.11.0",
]
db = [
    "pyodbc>=4.0.0",
    "pymssql>=2.2.0",
    "psycopg2-binary>=2.9.0",
    "mysql-connector-python>=8.0.0",
]
async = []

[project.urls]
Homepage = "https://github.com/tonysebion/medallion-foundry"
Documentation = "https://github.com/tonysebion/medallion-foundry/blob/main/README.md"
Repository = "https://github.com/tonysebion/medallion-foundry"
"Bug Reports" = "https://github.com/tonysebion/medallion-foundry/issues"
Changelog = "https://github.com/tonysebion/medallion-foundry/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = [
    "pipelines",
    "pipelines.lib",
    "pipelines.lib.storage",
    "pipelines.examples",
    "pipelines.templates",
]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "boto3.*",
    "botocore.*",
    "requests.*",
    "tenacity.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["pipelines"]
omit = ["tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.setuptools_scm]
write_to = "pipelines/_version.py"
version_scheme = "post-release"
local_scheme = "no-local-version"

# =============================================================================
# Import Linter - Module Architecture Enforcement
# =============================================================================
[tool.importlinter]
root_package = "pipelines"

[[tool.importlinter.contracts]]
name = "Pipelines module structure"
type = "independence"
modules = [
    "pipelines.examples",
    "pipelines.templates",
]

# =============================================================================
# Ruff - Modern Python Linter and Formatter
# =============================================================================
[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B905",  # zip without explicit strict parameter
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/**/*.py" = ["ARG"]  # Allow unused arguments in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
