[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "medallion-foundry"
dynamic = ["version"]
description = "Config-driven Python framework for landing data into Bronze layer with pluggable storage backends"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Tony Sebion"}
]
keywords = ["data-engineering", "bronze-layer", "medallion-architecture", "etl", "data-pipeline", "storage-backends"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9"
dependencies = [
    "boto3==1.17.84",
    "pandas>=1.5.0",
    "polars>=1.0.0",
    "pandera>=0.20.0",
    "pydantic-settings>=2.1.0",
    "structlog>=24.1.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "httpx>=0.27.0",
    "requests-toolbelt>=1.0.0",
    "tenacity>=8.0.0",
    "ibis-framework[duckdb]>=9.0.0",
    "pyodbc>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.10.0",
    "pytest-mypy>=1.0.1",
    "mypy>=0.990",
    "types-PyYAML>=6.0.0",
    "types-requests>=2.28.0",
    "mkdocs-material>=9.0.0",
    "ruff>=0.3.0",
    "pre-commit>=3.6.0",
    "import-linter>=2.0",  # Layer architecture enforcement
]
azure = [
    "azure-storage-blob>=12.19.0",
    "azure-identity>=1.15.0",
    "adlfs>=2023.11.0",
]
db = [
    "pymssql>=2.2.0",
    "psycopg2-binary>=2.9.0",
    "mysql-connector-python>=8.0.0",
]
tui = [
    "prompt_toolkit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/tonysebion/medallion-foundry"
Documentation = "https://github.com/tonysebion/medallion-foundry/blob/main/README.md"
Repository = "https://github.com/tonysebion/medallion-foundry"
"Bug Reports" = "https://github.com/tonysebion/medallion-foundry/issues"
Changelog = "https://github.com/tonysebion/medallion-foundry/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = [
    "pipelines",
    "pipelines.lib",
    "pipelines.lib.storage",
    "pipelines.examples",
    "pipelines.templates",
]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "boto3.*",
    "botocore.*",
    "requests.*",
    "tenacity.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["pipelines"]
omit = ["tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.setuptools_scm]
write_to = "pipelines/_version.py"
version_scheme = "post-release"
local_scheme = "no-local-version"

# =============================================================================
# Import Linter - Module Architecture Enforcement
# =============================================================================
[tool.importlinter]
root_package = "pipelines"

[[tool.importlinter.contracts]]
name = "Pipelines module structure"
type = "independence"
modules = [
    "pipelines.examples",
    "pipelines.templates",
]
